fix: wrap pages with a layout

--- a/src/pages/RequestPage/RequestPage.module.css
+++ b/src/pages/RequestPage/RequestPage.module.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
+.container {
+  width: 100%;
+}
+
 .main {
   display: flex;
   flex-direction: column;
